--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,66 @@ right: 0.625rem;
 }
 /*final de footer*/
 
+/*inicio hero*/
+    .hero {
+            background-image: url(../images/fondo.jpg);
+            background-size: cover;
+            background-position: center center;
+            background-color: #777;
+            background-blend-mode: multiply;
+
+    }
+
+    .hero .container{
+        padding: 130px 10px;
+    }
+
+    .hero h1{
+        font-family: var(--fuentetitulos);
+        font-size: 2.25rem;
+        color: white;
+
+    }
+    .hero h2{
+       color: var(--colorprincipal);
+       font-size: 1.25rem;
+       margin: var(--margingrid) 0;
+    }
+    .hero p{
+        color: white;
+    }
+    .boton{
+        display: inline-block;
+        background-color: var(--colorprincipal);
+        padding: 1.15rem;
+        margin: var(--margingrid) 0;
+        color: white;
+        text-decoration: none;
+        border: 1px solid var(--colorprincipal);
+    }
+
+    .boton: hover{
+        background-color: transparent;
+        color:  var(--colorprincipal)
+        & i{
+            transform: translateX(5px);
+            transition: transform 0.5s;
+        }
+        
+    }
+    .hero .social{
+        display: flex;
+        justify-content: space-between;
+        width: 10rem;
+        & a{
+            font-size: 2em;
+            color: white;
+            text-decoration: none;
+
+        }
+    }
+/*final hero*/
+
 
 
 
