--- a/css/style.css
+++ b/css/style.css
@@ -206,12 +206,96 @@ right: 0.625rem;
     }
 /*final hero*/
 
+/*inicio our services*/
+main section{
+    padding: 2.125rem 0.625rem;
+}
 
+main .grid{
+    display: grid;
+    gap: var(--margingrid);
+    grid-template-rows: 1fr;
+}
+
+
+main section h2{
+    font-family: var(--fuentetitulos);
+    font-size: 2em;
+    text-align: center;
+        & span{
+        color: var(--colorprincipal); 
+         }
+   
+    }
+main section .underline{
+    position: relative;
+    width: 100px;
+    margin: 0 auto;
+    color: var(--colorprincipal);
+    font-weight: bold;
+    text-align: center;
+    & hr{
+        border-color: var(--colorprincipal);
+        position: absolute;
+        width: 100%;
+        top: -2px;
+    }
+    & span{
+        text-align: center;
+    }
+}
+
+main .grid article{
+    padding: var(--margingrid) 0;
+    border-bottom: 1px solid #aaa;
+    & i{
+        color: var(--colorprincipal);
+    }
+    & div i{
+        border: 1px solid var(--colorprincipal);
+        padding: 0.8rem;
+        font-size: 140%;
+        
+    }
+    & h3{
+        margin: var(--margingrid);
+        font-weight: 700;
+        font-size: 115%;
+    }
+    & p{
+        color: #666;
+        font-size: 95%;
+        line-height: 1.2;
+        margin-bottom: var(--margingrid);
+    }
+    & a{
+        color: var(--colorprincipal);
+        text-decoration: none;
+        font-weight: 700;
+    }
+}
+/*final our services*/
 
 
 
 
 /*inicio mediaquoris*/
+@media(min-width: 37.5rem){
+    main .grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    main .grid article:last-child{
+        grid-column: 1/3;
+
+    }
+    main .grid article{
+        padding: 1.25rem;
+        border-bottom: 0;
+        border-left: 1px solid #aaa;
+    }
+
+    
+}
 
 @media( min-width: 48rem ){
     header .nav-top .container{
@@ -230,6 +314,13 @@ right: 0.625rem;
     footer{
         text-align: left;
     }  
+}
+main .grid{
+    grid-template-columns: repeat(3, 1fr);
+}
+main .grid article:last-child{
+    grid-column: auto;
+
 }
 
 @media(min-width: 62.75rem){
