--- a/css/stylecssmenu.css
+++ b/css/stylecssmenu.css
@@ -1,7 +1,7 @@
 @import url(reset.css);
 @import url('https://fonts.googleapis.com/css2?family=Handlee&family=Montserrat:wght@400;700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css');
-
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Pacifico&family=Satisfy&display=swap');
 *{
     box-sizing: border-box;
 }
@@ -22,6 +22,7 @@ font-family: 'Montserrat', sans-serif;
    --fontsize: 1rem;
    --anchomaximo: 68.75rem;
    --margingrid: 1rem;
+   --fuentecursiva:'Great'
 }
 
 img{
@@ -31,10 +32,11 @@ img{
 }
 
 .container{
-    max-width: var(--anchomaximo);
+    max-width: 1500px;
     margin: 0 auto;
     padding:0 0.625rem;
 }
+
 
 
 body{
@@ -50,8 +52,6 @@ header .nav-top{
 }
 
 header .nav-top .container{
-    
-   
     display: flex;
     justify-content: space-around;
     & span{
@@ -64,20 +64,19 @@ header .nav-top .container{
 }
 
 header nav .container{
+    background-color: #23232a;
     display: flex;
     flex-wrap: wrap;
-    
 }
 
 header nav figure a{
-    display: block;
+    display: flex;
     max-width: 6.25rem;
 }
 
 header figure{
     width: calc(100% - 1.875rem);
     padding: 1.25rem 0;
-   
 }
 
 header .hamburguesa{
@@ -91,6 +90,7 @@ header .menu{
 }
 
 header .hamburguesa div{
+    background-color: #fa573a;
     border-top: 2px solid #aaa;
     margin-bottom: 0.625rem;
 }
@@ -175,7 +175,7 @@ footer a{
     }
 
     .hero p{
-        color: white;
+        color: rgb(250, 248, 248);
     }
     
     .boton{
@@ -209,12 +209,32 @@ footer a{
 
 /* fin hero */
 
-/* inicio our services */
+/* inicio Today menu */
 
 main section {
     padding: 2.125rem 0.625rem;
+    background-color: #21242e;
 }
-
+main section div ul{
+    color: aliceblue;
+    font-size: 1rem;
+    margin-top: 1rem;
+    font-family:cursive ;
+}
+main section div h3{
+    color: white;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    font-size: 1.25rem;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+main section div h6{
+    color: rgb(183, 175, 175);
+    font-size: 0.9rem;
+}
+main section div h3 span2{
+    color: #fa573a;
+}
 main .grid{
     display: grid;
     gap: var(--margingrid);
@@ -222,13 +242,15 @@ main .grid{
 }
 
 main section h2{
-    font-family: var(--fuentetitulos);
-    font-size: 2rem;
+    color: white;
+    font-family: var(--fuentecursiva);
+    font-size: 3rem;
     text-align: center;
     & span{
-        color: var(--colorprincipal);
+        color: rgb(228, 120, 77);
     }
 }
+
 
 main section .underline{
     position: relative;
@@ -251,8 +273,10 @@ main .grid article{
     & i{
         color: var(--colorprincipal);
     }
-    & div i{ 
-        border: 1px solid var(--colorprincipal);
+    & div img{ 
+        position: ab;
+       height:226px;
+       width: 340px;
         padding: 0.8rem;
         font-size: 150%;
     }
@@ -260,10 +284,11 @@ main .grid article{
         margin: var(--margingrid) 0;
         font-weight: 700;
         font-size: 115%;
+        color: aliceblue;
     }
     & p{
-        color: #666;
-        font-size: 95%;
+        color: #b8b2b2;
+        font-size: 100%;
         line-height: 1.2;
         margin-bottom: var(--margingrid);
     }
@@ -275,74 +300,10 @@ main .grid article{
         font-weight: 700;
     }
 }
-/* final our services */
-/* inicio about us */
-
-#aboutus {
-    margin-bottom: 12.5rem;
-}
-
-section#aboutus .flex{
-    margin-top: 1.875rem;
-    display: flex;
-    flex-direction: column;
-    gap: var(--margingrid);
-    & h3{
-        font-weight: 700;
-        font-size: 120%;
-    }
-    & h4{
-        color: var(--colorprincipal);
-        font-size: 110%;
-        margin: var(--margingrid) 0;
-    }
-    & p{
-        color: #666;
-        line-height: 1.20;
-    }  
-}
-
-section#aboutus .imagen{
-    border: 3px solid var(--colorprincipal);
-    transform: rotateZ(10deg);
-    width: 95%;
-    transition: 1s;
-}
-
-section#aboutus .imagen .marco{
-    transform: rotateZ(-10deg);
-    transition: 1s;
-}
-
-section#aboutus figure:hover :is(.imagen, .marco){
-    transform: rotateZ(0deg);
-}
+/* final today */
 
 
-/* final about us */
 
-
-/* inicio mequeries */
-
-@media(min-width: 37.5rem){
-    main .grid{
-        grid-template-columns:repeat(2, 1fr);
-    }
-
-    main .grid article:last-child{
-        grid-column: 1/3;
-    }
-
-    main .grid article{
-        padding: 1.25rem;
-        border-bottom: 0;
-        border-left: 1px solid #aaa;
-    }
-
-    section#aboutus .flex{
-         flex-direction: row; 
-    }
-}
 
 @media( min-width: 48rem ){
     header .nav-top .container{
